--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,7 @@
 ---
+
 ---
-<div class="py-6  border-b-2">
-    <a href="/">Danseskolen</a>
+
+<div class="py-6 border-b-2 text-persianmosaic-500 font-display">
+  <a href="/">Danseskolen</a>
 </div>
