--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,16 +83,35 @@ const udvalgtenyheder = sorteredenyheder.slice(0, 4);
                   class="object-cover h-72 w-full"
                 />
                 <div
-                  class="badge rounded absolute top-4 left-4 text-persianmosaic-700 p-4 bg-white"
-                  x-show=""
+                  class="badge rounded absolute top-4 left-4 bg-persianmosaic-700 p-4"
+                  x-show="
+                  "
                 >
-                  Nyt hold!
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-6 h-6 fill-white"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M15.362 5.214A8.252 8.252 0 0 1 12 21 8.25 8.25 0 0 1 6.038 7.047 8.287 8.287 0 0 0 9 9.601a8.983 8.983 0 0 1 3.361-6.867 8.21 8.21 0 0 0 3 2.48Z"
+                    ></path>
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M12 18a3.75 3.75 0 0 0 .495-7.468 5.99 5.99 0 0 0-1.925 3.547 5.975 5.975 0 0 1-2.133-1.001A3.75 3.75 0 0 0 12 18Z"
+                    ></path>
+                  </svg>
                 </div>
                 <div
                   class="badge absolute top-6 right-0 bg-persianmosaic-800 p-4 text-white"
                   x-show="dansehold.rabat"
                 >
-                  <span x-text="dansehold.rabatsats"></span> rabat!
+                  <span x-text="dansehold.rabatsats"> </span> rabat!
                 </div>
                 <div
                   class="badge absolute bottom-6 right-0 bg-persianmosaic-900 text-white p-4"
